--- a/templates/town.phtml
+++ b/templates/town.phtml
@@ -3,3 +3,18 @@
 <?php else: ?>
 	<p>Town</p>
 <?php endif; ?>
+
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+      <img alt="" src="/img/building_1.png">
+    </div>
+    <div class="col-sm">
+      <img alt="" src="/img/building_1.png">
+    </div>
+    <div class="col-sm">
+      <img alt="" src="/img/building_1.png">
+    </div>
+  </div>
+</div>
