--- a/templates/town.phtml
+++ b/templates/town.phtml
@@ -1,20 +1,27 @@
 <?php if (isset($name)) : ?>
-	<h2>Hello <?= htmlspecialchars($name); ?>!</h2>
+	<h2> <?= htmlspecialchars($name); ?>!</h2>
 <?php else: ?>
-	<p>Town</p>
+	<p></p>
 <?php endif; ?>
+
+
+
 
 
 <div class="container">
   <div class="row">
     <div class="col-sm">
-      <img alt="" src="/img/building_1.png">
+    <div><img alt="" src="/public/img/building_1.png">
+      <p>12</p>
+      </div>
+      
     </div>
     <div class="col-sm">
-      <img alt="" src="/img/building_1.png">
+      <img alt="" src="/public/img/building_1.png">
     </div>
     <div class="col-sm">
-      <img alt="" src="/img/building_1.png">
+      <img alt="" src="/public/img/building_1.png">
     </div>
   </div>
 </div>
+
